feat: add func components + fetch api

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@
 @import url(./blocks/places/__items/places__items.css);
 @import url(./blocks/places/__item/places__item.css);
 @import url(./blocks/places/__delete/places__delete.css);
+@import url(./blocks/places/__delete/_hidden/places__delete_hidden.css);
 @import url(./blocks/places/__img/places__img.css);
 @import url(./blocks/places/__description/places__description.css);
 @import url(./blocks/places/__title/places__title.css);
