--- a/src/blocks/places/__delete/places__delete.css
+++ b/src/blocks/places/__delete/places__delete.css
@@ -10,10 +10,12 @@
   background-size: contain;
   background-color: transparent;
   margin: 0;
-  transition: opacity .2s ease-in;
+  transition: opacity 0.2s ease-in;
   position: absolute;
   top: 20px;
   right: 20px;
+  visibility: visible;
+  opacity: 1;
 }
 
 .places__delete:hover {
